--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "reponsive-images",
-  "version": "0.1.0",
+  "name": "mws-blog",
+  "version": "1.0.0",
+  "description": "## Your Goals: ##",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/udacity/responsive-images.git"
+    "url": "git+https://github.com/randomkeyz/mws-blog.git"
   },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/randomkeyz/mws-blog/issues"
+  },
+  "homepage": "https://github.com/randomkeyz/mws-blog#readme",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-mkdir": "~0.1.2",
-    "grunt-contrib-copy": "~0.8.0"
-  },
-  "dependencies": {
-    "grunt-responsive-images": "^0.1.6"
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-image-resize": "^0.13.0",
+    "gulp-imagemin": "^4.1.0",
+    "imagemin-pngquant": "^5.1.0",
+    "run-sequence": "^2.2.1"
   }
 }
